# CP-23-24-57534-60747

./: .gitignore  CMakeLists.txt
dataset/: output01_5.ppm
example/: histogram_eq.cu  histogram_eq.h  main.cpp
include/: histogram_eq.h
report/: acmart.cls  template.tex
results/: 1024x1024.ppm_CUDA_timing_results.csv  1024x1024.ppm_OMP_timing_results.csv  1024x1024.ppm_ORG_NOT_VECTORIZED_timing_results.csv  1024x1024.ppm_ORG_VECTORIZED_timing_results.csv  1280x1280.ppm_CUDA_timing_results.csv  1280x1280.ppm_OMP_timing_results.csv  1280x1280.ppm_ORG_NOT_VECTORIZED_timing_results.csv  1280x1280.ppm_ORG_VECTORIZED_timing_results.csv  1536x1536.ppm_CUDA_timing_results.csv  1536x1536.ppm_OMP_timing_results.csv  1536x1536.ppm_ORG_NOT_VECTORIZED_timing_results.csv  1536x1536.ppm_ORG_VECTORIZED_timing_results.csv  16384x16384.ppm_CUDA_timing_results.csv  16384x16384.ppm_OMP_timing_results.csv  16384x16384.ppm_ORG_NOT_VECTORIZED_timing_results.csv  16384x16384.ppm_ORG_VECTORIZED_timing_results.csv  1792x1792.ppm_CUDA_timing_results.csv  1792x1792.ppm_OMP_timing_results.csv  1792x1792.ppm_ORG_NOT_VECTORIZED_timing_results.csv  1792x1792.ppm_ORG_VECTORIZED_timing_results.csv  2048x2048.ppm_CUDA_timing_results.csv  2048x2048.ppm_OMP_timing_results.csv  2048x2048.ppm_ORG_NOT_VECTORIZED_timing_results.csv  2048x2048.ppm_ORG_VECTORIZED_timing_results.csv  2304x2304.ppm_CUDA_timing_results.csv  2304x2304.ppm_OMP_timing_results.csv  2304x2304.ppm_ORG_NOT_VECTORIZED_timing_results.csv  2304x2304.ppm_ORG_VECTORIZED_timing_results.csv  2560x2560.ppm_CUDA_timing_results.csv  2560x2560.ppm_OMP_timing_results.csv  2560x2560.ppm_ORG_NOT_VECTORIZED_timing_results.csv  2560x2560.ppm_ORG_VECTORIZED_timing_results.csv  256x256.ppm_CUDA_timing_results.csv  256x256.ppm_OMP_timing_results.csv  256x256.ppm_ORG_NOT_VECTORIZED_timing_results.csv  256x256.ppm_ORG_VECTORIZED_timing_results.csv  2816x2816.ppm_CUDA_timing_results.csv  2816x2816.ppm_OMP_timing_results.csv  2816x2816.ppm_ORG_NOT_VECTORIZED_timing_results.csv  2816x2816.ppm_ORG_VECTORIZED_timing_results.csv  (+48 more)
scripts/: export_timings.cpp  generate_datasets.sh  run_iterations.sh
src/: dataset_generator.cpp  histogram_eq.cpp  histogram_eq.cu  histogram_eq_cuda.cu  histogram_eq_cuda_1.cu  histogram_eq_cuda_scratch.cu  histogram_eq_omp.cpp  histogram_eq_org.cpp  main.cpp
test/: CMakeLists.txt  histogram_eq_cuda_test.cpp  histogram_eq_omp_test.cpp  histogram_eq_org_test.cpp  histogram_eq_test.cpp
visualization/: create_visualizations.ipynb  pyproject.toml
